welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:2: error: not found: value temps
  if(isSummer==true){if(temp<=100 && temps>=60){return true};return false}
                                     ^squirrelPlay:3: error: not found: value temps
  if(temps>=60 && temps<=90){return true}
     ^squirrelPlay:3: error: not found: value temps
  if(temps>=60 && temps<=90){return true}
                  ^